--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_launcher_icons:
   google_fonts:
+  models:
+    path: package/models
 
 dev_dependencies:
   flutter_test:
