--- a/package/models/pubspec.yaml
+++ b/package/models/pubspec.yaml
@@ -1,15 +1,17 @@
 name: models
-description: "A new Flutter package project."
+description: 'A new Flutter package project.'
 version: 0.0.1
 homepage:
 
 environment:
   sdk: '>=3.3.2 <4.0.0'
-  flutter: ">=1.17.0"
+  flutter: '>=1.17.0'
 
 dependencies:
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  google_maps_flutter: ^2.5.3
 
 dev_dependencies:
   flutter_test:
