Home screen design was done

--- a/package/models/pubspec.yaml
+++ b/package/models/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_maps_flutter: ^2.5.3
+  cached_network_image:
 
 dev_dependencies:
   flutter_test:
