--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icons/
+    - assets/avatar.jpg
 
 flutter_icons:
   android: 'launcher_icon'
